# TUD_InfBSc_SPP

./: README.md  task3_A.txt
Exercise1/: Makefile  hh.c  seq_fault.c
Practicum1/: ReleaseDocs.md
Practicum1/Exercise1/TaskA/: Makefile  task-a.c
Practicum1/Exercise1/TaskB/: Makefile  run-tests.sh  task-b.c
Practicum1/Exercise1/TaskD/: task-d.c
Practicum1/Exercise2/: CMakeLists.txt  RUNTIME_TESTS_RAW.txt  run_job
Practicum1/Exercise2/TaskA/: Makefile  task_a.c
Practicum1/Exercise2/TaskB/: Makefile  run-tests.sh  run.sh  task_b.c
Practicum1/Exercise2/TaskC/: Makefile  task_c.c
Practicum1/Exercise3/: Makefile  task3_A.txt  task3_B.c  task3_C.c
Practicum1/Exercise5/: CMakeLists.txt  komplex.cpp  ppmwrite.h
Practicum1/Exercise5/TaskB/: Makefile  task-b.cpp
Practicum1/Exercise5/TaskC/: Makefile  run-tests.sh  task-c.cpp
Practicum1/task1/: CMakeLists.txt  RUNTIME_TESTS_RAW.txt  main.c  prim  run_job
Practicum1/task1/TaskA/: task-a.c
Practicum1/task1/TaskB/: run-tests.sh  task-b.c
Practicum1/task1/TaskD/: Makefile  run-tests.sh  task-d.c
Practicum1/task5/: komplex.h  mandelbrot.py  ppmwrite.cpp
Practicum1/task5/TaskB/: Makefile  task-b.cpp
Practicum1/task5/TaskC/: Makefile  task-c.cpp
Practicum1/time_measurements/: Task1-C.csv  Task1-C.ods  Task1-D.csv  Task1-D.ods  Task2-C.csv  Task2-C.ods  Task5-C.csv  Task5-C.ods
Practicum2/: README.md  ReleaseDocs.md
Practicum2/Exercise1/: CMakeLists.txt  PamelaThePlaceholder  task1.c
Practicum2/Exercise2/: CMakeLists.txt  task2.c
Practicum2/ORIGINAL/: Aufgabe3.txt  CMakeLists.txt  Makefile  extrap_out  input.res  log.out.5645986  log.out.5646638  log.out.5646639  task1  task1.c  task2
Practicum3/: clear.sh  run_job  template.cu
clustertest/: Job_Name.err.5310236  Job_Name.err.5310493  Job_Name.err.5310619  Job_Name.err.5310945  Job_Name.out.5310945  run_job  test  test.c
rs_generator/: install.sh  rs_generator
